--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [workspace]
-members = [ "physics" ]
+members = [ "camera", "physics" ]
 
 
 # Enable a small amount of optimization in the dev profile.
