--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [workspace]
-members = [ "camera", "physics" ]
+members = [ "ui", "physics" ]
 
 
 # Enable a small amount of optimization in the dev profile.
@@ -19,11 +19,7 @@ opt-level = 3
 
 # Enable more optimization in the release profile at the cost of compile time.
 [profile.release]
-# Compile the entire crate as one unit.
-# Slows compile times, marginal improvements.
 codegen-units = 1
-# Do a second optimization pass over the entire program, including dependencies.
-# Slows compile times, marginal improvements.
 lto = "thin"
 
 
@@ -32,3 +28,4 @@ bevy = { version = "0.14.1", features = ["dynamic_linking"] }
 bevy_infinite_grid = "0.13.0"
 log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] } # Remove trace logging at compile time
 physics = { path = "./physics/" }
+ui = { path = "./ui/" }
