feat: workflow cache for build dependecies
Signed-off-by: Square-face <sq8.square.face@gmail.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,6 +16,12 @@ jobs:
       with:
         packages: libasound2-dev libudev-dev
         version: 1.0
+                  
+    - uses: actions/cache@v4.0.2
+      with:
+        path: |
+          ${{ github.workspace }}/target
+        key: ${{ runner.os }}-tests
 
     - name: build
       run: cargo build --verbose
