chore: added cargo registry to cache
Signed-off-by: Square-face <sq8.square.face@gmail.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,7 +21,8 @@ jobs:
       with:
         path: |
           ${{ github.workspace }}/target
-        key: ${{ runner.os }}-tests
+          ~/.cargo/registry
+        key: ${{ runner.os }}-debug-tests
 
     - name: build
       run: cargo build --verbose
