--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,6 +37,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v4
 
     - name: Use cached apt dependencies
       uses: awalsh128/cache-apt-pkgs-action@latest
@@ -67,6 +68,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v4
 
     - name: Use cached apt dependencies
       uses: awalsh128/cache-apt-pkgs-action@latest
