feat: moved workflow checkout to tests workflow
Signed-off-by: Square-face <sq8.square.face@gmail.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v4
     - uses: ./.github/cargo-setup
 
     - name: build
@@ -21,6 +22,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v4
     - uses: ./.github/cargo-setup
 
     - name: Lib tests
@@ -37,6 +39,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v4
     - uses: ./.github/cargo-setup
 
     - name: Lint
