fix: fixed inncorrect nextest command in check workflow
Signed-off-by: Square-face <sq8.square.face@gmail.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,7 +33,7 @@ jobs:
       run: cargo install cargo-binstall && cargo binstall cargo-nextest -y
 
     - name: Execute tests
-      run: cargo nextest --workspace --all
+      run: cargo nextest run --workspace --all
 
 
 
