fix: added shell to use when installing nextest
Signed-off-by: Square-face <sq8.square.face@gmail.com>

--- a/.github/cargo-setup/action.yml
+++ b/.github/cargo-setup/action.yml
@@ -9,9 +9,6 @@ runs:
       packages: libasound2-dev libudev-dev
       version: 1.0
 
-  - name: Install nextest
-    run: curl -LsSf https://get.nexte.st/latest/linux | tar zxf - -C ${CARGO_HOME:-~/.cargo}/bin
-
   - name: Use cached build depndencies
     uses: actions/cache@v4.0.2
     with:
@@ -19,3 +16,8 @@ runs:
       path: |
         ~/.cargo/
         target/
+
+  - name: Install nextest
+    shell: bash
+    run: curl -LsSf https://get.nexte.st/latest/linux | tar zxf - -C ${CARGO_HOME:-~/.cargo}/bin
+
