chore: made cargo-setup only restore cache and saving is only done by the build step
Signed-off-by: Square-face <sq8.square.face@gmail.com>

--- a/.github/cargo-setup/action.yml
+++ b/.github/cargo-setup/action.yml
@@ -10,9 +10,10 @@ runs:
       version: 1.0
 
   - name: Use cached build depndencies
-    uses: actions/cache@v4.0.2
+    uses: actions/cache/restore@v4
     with:
       key: ${{ runner.os }}-cargo-${{ hashFiles('Cargo.lock') }}
+      restore-key: ${{ runner.os }}-cargo-
       path: |
         ~/.cargo/
         target/
